modules/gdscript/tests/scripts/runtime/errors/typed_array_assign_basic_to_typed.gd
#debug-only: Run-time differently typed container checks are disabled in release

func test():
	var basic := [1]
	var _typed: Array[int] = basic
	print('not ok')
